updated styling to pages and fixed some issues

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -77,22 +77,22 @@
                     <ul class="hamburger-links">
                         <li>
                             <a href="/">
-                                Home
+                                <span>Home</span>
                             </a>
                         </li>
                         <li>
                             <a href="/work/">
-                                Work
+                                <span>Work</span>
                             </a>
                         </li>
                         <li>
                             <a href="/about/">
-                                About
+                                <span>About</span>
                             </a>
                         </li>
                         <li>
                             <a href="/contact/">
-                                Contact
+                                <span>Contact</span>
                             </a>
                         </li>
                     </ul>
@@ -142,7 +142,7 @@
     </div>
 </div>
 
-<div class="section spacing">
+<div class="section spacing fit-content bottom-m-l">
     <div class="title">
         <h1>Skills</h1>
     </div>
@@ -180,7 +180,7 @@
     </div>
 </div>
 
-<div class="section spacing">
+<div class="section spacing fit-content bottom-m-l">
     <div class="title">
         <h1>Interests</h1>
     </div>
@@ -203,10 +203,11 @@
         </ul>
         <img src="https://via.placeholder.com/600" alt="placeholderImage">
     </div>
+</div>
 
-    <div class="spacing markdown bottom-m-l top-m-s">
+<div class="section spacing markdown bottom-m-l">
 
-        <h1>Heading 1</h1>
+    <h1>Heading 1</h1>
 <h2>Heading 2</h2>
 <h3>Heading 3</h3>
 <blockquote>
@@ -233,7 +234,6 @@ supported)</li>
 </ul>
 
 
-    </div>
 </div>
     </main>
     
@@ -269,10 +269,10 @@ supported)</li>
             <div class="footer-category-title">
                 <p>Sitemap</p>
             </div>
-            <a href="#">Home</a>
-            <a href="#">Projects</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
+            <a href="/">Home</a>
+            <a href="/work/">Work</a>
+            <a href="/about/">About</a>
+            <a href="/contact/">Contact</a>
         </div>
     </div>
 </footer>
