--- a/public/projects/2021-10-my-test-keeag/index.html
+++ b/public/projects/2021-10-my-test-keeag/index.html
@@ -77,22 +77,22 @@
                     <ul class="hamburger-links">
                         <li>
                             <a href="/">
-                                Home
+                                <span>Home</span>
                             </a>
                         </li>
                         <li>
                             <a href="/work/">
-                                Work
+                                <span>Work</span>
                             </a>
                         </li>
                         <li>
                             <a href="/about/">
-                                About
+                                <span>About</span>
                             </a>
                         </li>
                         <li>
                             <a href="/contact/">
-                                Contact
+                                <span>Contact</span>
                             </a>
                         </li>
                     </ul>
@@ -175,10 +175,10 @@
             <div class="footer-category-title">
                 <p>Sitemap</p>
             </div>
-            <a href="#">Home</a>
-            <a href="#">Projects</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
+            <a href="/">Home</a>
+            <a href="/work/">Work</a>
+            <a href="/about/">About</a>
+            <a href="/contact/">Contact</a>
         </div>
     </div>
 </footer>
