--- a/public/projects/2021-05-social-media-marketing-for-brandy/index.html
+++ b/public/projects/2021-05-social-media-marketing-for-brandy/index.html
@@ -14,6 +14,12 @@
         }
     </script> -->
 
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href=/assets/favicon"/favicon-16x16.png">
+    <link rel="manifest" href="/assets/favicon/site.webmanifest">
+
     <!-- Meta Info --> 
     <title>John Doe - Social Media Creation 3</title>
     <meta name="Description" CONTENT="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod">
