custom 404 page added

--- a/public/index.html
+++ b/public/index.html
@@ -139,6 +139,16 @@
 
         
              <div class="card">
+    <img src="/assets/images/placeholder-image.jpg" alt="This is atest">
+    <div class="content">
+        <div class="card-title"><h4>Abbi collaboration</h4></div>
+        <div class="card-date">18 Oct 2021</div>
+        <div class="card-breadcrumbs"><p>Collaboration with an awesome person</p></div>
+        <a href="/projects/2021-10-abbi-collaboration/" class="card-cta btn-primary">Learn More</a>
+    </div>
+</div>
+        
+             <div class="card">
     <img src="/assets/images/placeholder-image.jpg" alt="cool">
     <div class="content">
         <div class="card-title"><h4>my test Keeag</h4></div>
