SEO integrated into each page and separated into separate object

--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>John Doe - Contact Me</title>
+    <meta name="description" CONTENT="Lets get your idea into action by having a virtual coffee.">
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
@@ -11,14 +13,18 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="/assets/favicon/site.webmanifest">
 
-    <!-- Meta Info --> 
-    <title>John Doe - Contact Me</title>
-    <meta name="Description" CONTENT="Lets get your idea into action by having a virtual coffee.">
-
     <!-- Preload -->
     <link rel="preload" as="font" crossorigin="anonymous" type="font/ttf" href="/assets/fonts/Poppins-Light.ttf">
     <link rel="preload" as="font" crossorigin="anonymous" type="font/ttf" href="/assets/fonts/Poppins-Medium.ttf">
     <link rel="preload" as="font" crossorigin="anonymous" type="font/ttf" href="/assets/fonts/Poppins-Regular.ttf">
+
+    <!-- Twitter + Open Graph -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:creator" content="" />
+    <meta property="og:url" content="undefined/contact/" />
+    <meta property="og:title" content="Contact Me" />
+    <meta property="og:description" content="Lets get your idea into action by having a virtual coffee." />
+    <meta property="og:image" content="undefined" />
 
     <!-- CSS -->
     <link href="/style.css" rel="stylesheet">
@@ -104,7 +110,7 @@
       <div class="section contact-page spacing top-m-s full-page">
 
     <div class="title">
-        <h1>Interested in my work? Contact me below, its free...</h1>
+        <h1>Interested in my work? Lets get your idea to action.</h1>
     </div>
 
     <form name="contact-form" method="POST" data-netlify="true" class="contact-form">
