--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>John Doe - Portfolio Website</title>
+    <meta name="description" CONTENT="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.">
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
@@ -11,14 +13,18 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="/assets/favicon/site.webmanifest">
 
-    <!-- Meta Info --> 
-    <title>John Doe - Portfolio Website</title>
-    <meta name="Description" CONTENT="Let my work blow you away on my portfolio website...">
-
     <!-- Preload -->
     <link rel="preload" as="font" crossorigin="anonymous" type="font/ttf" href="/assets/fonts/Poppins-Light.ttf">
     <link rel="preload" as="font" crossorigin="anonymous" type="font/ttf" href="/assets/fonts/Poppins-Medium.ttf">
     <link rel="preload" as="font" crossorigin="anonymous" type="font/ttf" href="/assets/fonts/Poppins-Regular.ttf">
+
+    <!-- Twitter + Open Graph -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:creator" content="" />
+    <meta property="og:url" content="undefined/" />
+    <meta property="og:title" content="Portfolio Website" />
+    <meta property="og:description" content="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat." />
+    <meta property="og:image" content="undefinedhttps://via.placeholder.com/1200" />
 
     <!-- CSS -->
     <link href="/style.css" rel="stylesheet">
@@ -105,7 +111,7 @@
 <div class="section landing">
     <div class="hero">
         <div class="avatar">
-            <img src="https://via.placeholder.com/600" alt="A picture of me">
+            <img src="https://via.placeholder.com/1200" alt="This is alt text"> 
         </div>
         <h1 class="intro">    
             Hi, my name is John Doe
