--- a/public/projects/2021-05-01-social-media-marketing-for-brandx/index.html
+++ b/public/projects/2021-05-01-social-media-marketing-for-brandx/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>John Doe - </title>
+    <meta name="description" CONTENT="">
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
@@ -11,14 +13,18 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="/assets/favicon/site.webmanifest">
 
-    <!-- Meta Info --> 
-    <title>John Doe - Social Media Creation 2</title>
-    <meta name="Description" CONTENT="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod">
-
     <!-- Preload -->
     <link rel="preload" as="font" crossorigin="anonymous" type="font/ttf" href="/assets/fonts/Poppins-Light.ttf">
     <link rel="preload" as="font" crossorigin="anonymous" type="font/ttf" href="/assets/fonts/Poppins-Medium.ttf">
     <link rel="preload" as="font" crossorigin="anonymous" type="font/ttf" href="/assets/fonts/Poppins-Regular.ttf">
+
+    <!-- Twitter + Open Graph -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:creator" content="" />
+    <meta property="og:url" content="undefined/projects/2021-05-01-social-media-marketing-for-brandx/" />
+    <meta property="og:title" content="" />
+    <meta property="og:description" content="" />
+    <meta property="og:image" content="undefinedundefined" />
 
     <!-- CSS -->
     <link href="/style.css" rel="stylesheet">
@@ -102,6 +108,11 @@
     
     <main>
       
+
+
+
+
+
 <img class="work-bg-img" src="/assets/images/placeholder-image.jpg" alt="This is a test">
 <div class="section spacing full-page top-p-m">
     <div class="title">
