--- a/public/work/index.html
+++ b/public/work/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>John Doe - Latest Projects</title>
+    <meta name="description" CONTENT="View my latest projects which includes a variety of clients.">
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
@@ -11,14 +13,18 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="/assets/favicon/site.webmanifest">
 
-    <!-- Meta Info --> 
-    <title>John Doe - Latest Projects</title>
-    <meta name="Description" CONTENT="View my latest projects which includes a variety of clients.">
-
     <!-- Preload -->
     <link rel="preload" as="font" crossorigin="anonymous" type="font/ttf" href="/assets/fonts/Poppins-Light.ttf">
     <link rel="preload" as="font" crossorigin="anonymous" type="font/ttf" href="/assets/fonts/Poppins-Medium.ttf">
     <link rel="preload" as="font" crossorigin="anonymous" type="font/ttf" href="/assets/fonts/Poppins-Regular.ttf">
+
+    <!-- Twitter + Open Graph -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:creator" content="" />
+    <meta property="og:url" content="undefined/work/" />
+    <meta property="og:title" content="Latest Projects" />
+    <meta property="og:description" content="View my latest projects which includes a variety of clients." />
+    <meta property="og:image" content="undefined" />
 
     <!-- CSS -->
     <link href="/style.css" rel="stylesheet">
