Use elevntyComputed to auto-generate SEO for each new project

--- a/public/projects/2021-07-social-media-marketing-for-brandz/index.html
+++ b/public/projects/2021-07-social-media-marketing-for-brandz/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Doe - </title>
-    <meta name="description" CONTENT="">
+    <title>John Doe - Social Media Creation 4</title>
+    <meta name="description" CONTENT="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam...">
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
@@ -22,9 +22,9 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:creator" content="" />
     <meta property="og:url" content="undefined/projects/2021-07-social-media-marketing-for-brandz/" />
-    <meta property="og:title" content="" />
-    <meta property="og:description" content="" />
-    <meta property="og:image" content="undefinedundefined" />
+    <meta property="og:title" content="Social Media Creation 4" />
+    <meta property="og:description" content="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam..." />
+    <meta property="og:image" content="undefined/assets/images/placeholder-image.jpg" />
 
     <!-- CSS -->
     <link href="/style.css" rel="stylesheet">
@@ -108,11 +108,6 @@
     
     <main>
       
-
-
-
-
-
 <img class="work-bg-img" src="/assets/images/placeholder-image.jpg" alt="This is a test">
 <div class="section spacing full-page top-p-m">
     <div class="title">
