--- a/public/projects/2021-10-testing-the-editorial-publish-mode/index.html
+++ b/public/projects/2021-10-testing-the-editorial-publish-mode/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Doe - </title>
-    <meta name="description" CONTENT="">
+    <title>John Doe - Testing the editorial publish mode</title>
+    <meta name="description" CONTENT="Testing the editorial publish mode on Netlify CMS">
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
@@ -22,9 +22,9 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:creator" content="" />
     <meta property="og:url" content="undefined/projects/2021-10-testing-the-editorial-publish-mode/" />
-    <meta property="og:title" content="" />
-    <meta property="og:description" content="" />
-    <meta property="og:image" content="undefinedundefined" />
+    <meta property="og:title" content="Testing the editorial publish mode" />
+    <meta property="og:description" content="Testing the editorial publish mode on Netlify CMS" />
+    <meta property="og:image" content="undefined/assets/images/placeholder-image.jpg" />
 
     <!-- CSS -->
     <link href="/style.css" rel="stylesheet">
@@ -108,11 +108,6 @@
     
     <main>
       
-
-
-
-
-
 <img class="work-bg-img" src="/assets/images/placeholder-image.jpg" alt="Testing">
 <div class="section spacing full-page top-p-m">
     <div class="title">
