All SEO info integrated into fields for each page. Less overhead when updating.

--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>John Doe - Contact Me</title>
-    <meta name="description" CONTENT="Lets get your idea into action by having a virtual coffee.">
+    <meta name="description" CONTENT="Interested in my work? Lets get your idea to action.">
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
@@ -23,8 +23,8 @@
     <meta name="twitter:creator" content="" />
     <meta property="og:url" content="undefined/contact/" />
     <meta property="og:title" content="Contact Me" />
-    <meta property="og:description" content="Lets get your idea into action by having a virtual coffee." />
-    <meta property="og:image" content="undefined" />
+    <meta property="og:description" content="Interested in my work? Lets get your idea to action." />
+    <meta property="og:image" content="undefined/assets/images/placeholder-image.jpg" />
 
     <!-- CSS -->
     <link href="/style.css" rel="stylesheet">
