--- a/public/work/1/index.html
+++ b/public/work/1/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>John Doe - Latest Projects</title>
-    <meta name="description" CONTENT="View my latest projects which includes a variety of clients.">
+    <meta name="description" CONTENT="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ">
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
@@ -23,8 +23,8 @@
     <meta name="twitter:creator" content="" />
     <meta property="og:url" content="undefined/work/1/" />
     <meta property="og:title" content="Latest Projects" />
-    <meta property="og:description" content="View my latest projects which includes a variety of clients." />
-    <meta property="og:image" content="undefined" />
+    <meta property="og:description" content="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. " />
+    <meta property="og:image" content="undefinedassets/images/placeholder-image.jpg" />
 
     <!-- CSS -->
     <link href="/style.css" rel="stylesheet">
