global json renamed to site json. Now includes a link to the website, fixing link for SEO

--- a/public/index.html
+++ b/public/index.html
@@ -20,11 +20,11 @@
 
     <!-- Twitter + Open Graph -->
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:creator" content="" />
-    <meta property="og:url" content="undefined/" />
+    <meta name="twitter:creator" content="@johndoe" />
+    <meta property="og:url" content="https://11ty-portfolio-template.netlify.app/" />
     <meta property="og:title" content="Portfolio Website" />
     <meta property="og:description" content="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat." />
-    <meta property="og:image" content="undefinedhttps://via.placeholder.com/1200" />
+    <meta property="og:image" content="https://11ty-portfolio-template.netlify.apphttps://via.placeholder.com/1200" />
 
     <!-- CSS -->
     <link href="/style.css" rel="stylesheet">
