--- a/public/404/index.html
+++ b/public/404/index.html
@@ -20,11 +20,11 @@
 
     <!-- Twitter + Open Graph -->
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:creator" content="" />
-    <meta property="og:url" content="undefined/404/" />
+    <meta name="twitter:creator" content="@johndoe" />
+    <meta property="og:url" content="https://11ty-portfolio-template.netlify.app/404/" />
     <meta property="og:title" content="" />
     <meta property="og:description" content="" />
-    <meta property="og:image" content="undefinedundefined" />
+    <meta property="og:image" content="https://11ty-portfolio-template.netlify.appundefined" />
 
     <!-- CSS -->
     <link href="/style.css" rel="stylesheet">
