--- a/public/projects/2021-10-testing-the-editorial-publish-mode/index.html
+++ b/public/projects/2021-10-testing-the-editorial-publish-mode/index.html
@@ -20,11 +20,11 @@
 
     <!-- Twitter + Open Graph -->
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:creator" content="" />
-    <meta property="og:url" content="undefined/projects/2021-10-testing-the-editorial-publish-mode/" />
+    <meta name="twitter:creator" content="@johndoe" />
+    <meta property="og:url" content="https://11ty-portfolio-template.netlify.app/projects/2021-10-testing-the-editorial-publish-mode/" />
     <meta property="og:title" content="Testing the editorial publish mode" />
     <meta property="og:description" content="Testing the editorial publish mode on Netlify CMS" />
-    <meta property="og:image" content="undefined/assets/images/placeholder-image.jpg" />
+    <meta property="og:image" content="https://11ty-portfolio-template.netlify.app/assets/images/placeholder-image.jpg" />
 
     <!-- CSS -->
     <link href="/style.css" rel="stylesheet">
