--- a/public/work/1/index.html
+++ b/public/work/1/index.html
@@ -20,11 +20,11 @@
 
     <!-- Twitter + Open Graph -->
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:creator" content="" />
-    <meta property="og:url" content="undefined/work/1/" />
+    <meta name="twitter:creator" content="@johndoe" />
+    <meta property="og:url" content="https://11ty-portfolio-template.netlify.app/work/1/" />
     <meta property="og:title" content="Latest Projects" />
     <meta property="og:description" content="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. " />
-    <meta property="og:image" content="undefinedassets/images/placeholder-image.jpg" />
+    <meta property="og:image" content="https://11ty-portfolio-template.netlify.app/assets/images/placeholder-image.jpg" />
 
     <!-- CSS -->
     <link href="/style.css" rel="stylesheet">
