fixed landing text and added dummy avatar

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <meta property="og:url" content="https://11ty-portfolio-template.netlify.app/" />
     <meta property="og:title" content="Portfolio Website" />
     <meta property="og:description" content="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat." />
-    <meta property="og:image" content="https://11ty-portfolio-template.netlify.apphttps://via.placeholder.com/1200" />
+    <meta property="og:image" content="https://11ty-portfolio-template.netlify.app/assets/images/pexels-kampus-production-7893740-compressed.jpg" />
 
     <!-- CSS -->
     <link href="/style.css" rel="stylesheet">
@@ -111,12 +111,12 @@
 <div class="section landing">
     <div class="hero">
         <div class="avatar">
-            <img src="https://via.placeholder.com/1200" alt="This is alt text"> 
+            <img src="/assets/images/pexels-kampus-production-7893740-compressed.jpg" alt="This is alt text"> 
         </div>
-        <h1 class="intro">    
+        <h1 class="intro spacing">    
             Hi, my name is John Doe
         </h1>
-        <h1 class="short-summary">
+        <h1 class="short-summary spacing">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         </h1>
 
