--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -147,19 +147,19 @@
         <label for="name">
             Name
         </label>
-        <input name="name" type="text" placeholder="John Doe">
+        <input name="name" type="text" placeholder="John Doe" class="border-round-sm">
     </div>
     <div class="contact-detail">
         <label for="email">
             Email
         </label>
-        <input name="email" type="email" placeholder="example@domain.com">
+        <input name="email" type="email" placeholder="example@domain.com" class="border-round-sm">
     </div>
     <div class="contact-detail">
         <label for="message">
             Message
         </label>
-        <textarea name="message" rows="4" placeholder="Enter message here..."></textarea>
+        <textarea name="message" rows="4" placeholder="Enter message here..." class="border-round-sm"></textarea>
     </div>
     <input type="submit" value="Get in Touch" class="btn-primary">
 </form>
