--- a/public/projects/2021-10-abbi-collaboration/index.html
+++ b/public/projects/2021-10-abbi-collaboration/index.html
@@ -44,10 +44,7 @@
             <div class="nav-main">
                 <a href="/" class="nav-logo">
                 <li>
-                    
-                    <object type="image/svg+xml" data="/assets/images/logoipsum-logo-1.svg">
-                    </object>
-                    
+                    <img src="/assets/images/logoipsum-logo-1.svg" alt="Logoipsum">
                 </li>
                 </a>
             </div>
