--- a/public/work/1/index.html
+++ b/public/work/1/index.html
@@ -238,7 +238,7 @@
                 <div class="footer-links-wrapper">
                 
                     <div class="footer-link">
-                        <a href="https://www.linkedin.com/in/jacqueso-olivier/" target="_blank">
+                        <a href="https://www.linkedin.com/" target="_blank">
                             <img src="/assets/images/LinkedIn-Logo.png" alt="LinkedIn_image">
                         </a>
                     </div>
