--- a/public/about/index.html
+++ b/public/about/index.html
@@ -259,30 +259,7 @@
 <div class="section spacing markdown bottom-m-l">
 
     <h1>Heading 1</h1>
-<h2>Heading 2</h2>
-<h3>Heading 3</h3>
-<blockquote>
-<p>This is a blockquote
-<strong>bold text</strong>
-<em>italicized text</em></p>
-</blockquote>
-<ol>
-<li>First Item</li>
-<li>Second Item</li>
-<li>Third Item</li>
-</ol>
-<p>I am writing a long paragraph.</p>
-<p><img src="/assets/images/placeholder-image.jpg" alt="Placeholder" title="This is the title"></p>
-<ul>
-<li>this is a complete item</li>
-<li>this is an incomplete item</li>
-<li>@mentions, #refs, <a href="">links</a>,
-<strong>formatting</strong>, and <del>tags</del>
-supported</li>
-<li>list syntax required (any
-unordered or ordered list
-supported)</li>
-</ul>
+<p>Apparently it didn't pick up the body text already there</p>
 
 
 </div>
