removed section class for about markdown

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -258,7 +258,7 @@
     </div>
 </div>
 
-<div class="section spacing markdown bottom-m-l">
+<div class="spacing markdown bottom-m-l">
 
     <h1>Heading 1</h1>
 <p>Apparently it didn't pick up the body text already there</p>
