added more content to about markdown and made markdown.js

--- a/public/projects/2021-10-testing-the-editorial-publish-mode/index.html
+++ b/public/projects/2021-10-testing-the-editorial-publish-mode/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Doe - Testing the editorial publish mode</title>
-    <meta name="description" CONTENT="Testing the editorial publish mode on Netlify CMS">
+    <title>John Doe - Project Title 5</title>
+    <meta name="description" CONTENT="Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.">
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
@@ -22,8 +22,8 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:creator" content="@johndoe" />
     <meta property="og:url" content="https://11ty-portfolio-template.netlify.app/projects/2021-10-testing-the-editorial-publish-mode/" />
-    <meta property="og:title" content="Testing the editorial publish mode" />
-    <meta property="og:description" content="Testing the editorial publish mode on Netlify CMS" />
+    <meta property="og:title" content="Project Title 5" />
+    <meta property="og:description" content="Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." />
     <meta property="og:image" content="https://11ty-portfolio-template.netlify.app/assets/images/pexels-lisa-2374794.jpg" />
 
     <!-- CSS -->
@@ -135,10 +135,10 @@
     <main>
       <link href="/assets/themes/prism.css" rel="stylesheet"/>
 
-<img class="work-bg-img" src="/assets/images/pexels-lisa-2374794.jpg" alt="Testing">
+<img class="work-bg-img" src="/assets/images/pexels-lisa-2374794.jpg" alt="Starbucks coffee close up on a table">
 <div class="section spacing full-page top-p-m">
     <div class="title" id="project-title">
-        <h1>Testing the editorial publish mode</h1>
+        <h1>Project Title 5</h1>
     </div>
 
     <div class="project-summary">
@@ -180,7 +180,7 @@
                     </div>
             </div>
         
-        <p>Testing the editorial publish mode on Netlify CMS</p>
+        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
         <div class="cta centre-parent">
             <a href="#target-content" class="btn-primary">Tell me more!<span>&#8595;</span></a>
@@ -191,32 +191,15 @@
 <div class="section work-content markdown spacing bottom-m-l top-m-s">
     <span class="anchor-link" id="target-content"></span>
         <h1>Heading 1</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<h2>Heading 2</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 
         <a href="/work/" class="btn-primary top-m-s">All Projects</a><a href="#project-title" class="btn-primary" style="margin-top: 15px;">Back to Top</a>
 </div>
 
-<script>
-    $(document).ready(function() {
-        WrapCodeTagsWithPreTags();
-        AppenBulletListSpanToLists();
-    });
-
-    function AppenBulletListSpanToLists(){
-      $(".markdown ul, .markdown ol").children().prepend("<span class='bullet-point'></span>")
-    }
-
-    function WrapCodeTagsWithPreTags(){
-        $("code").parent().each(function(index){
-            if(!$(this).is('pre'))
-            {
-                $(this).children().wrap("<pre class='language-csharp' tabindex='0'></pre>");
-            }
-        });
-    }
-</script>
-
+<script src="/markdown.js"></script>
 <script src="/assets/themes/prism.js"></script>
     </main>
     
