--- a/public/projects/2021-11-project-title-7/index.html
+++ b/public/projects/2021-11-project-title-7/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Doe - Project Title 3</title>
-    <meta name="description" CONTENT="Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum">
+    <title>John Doe - Project Title 7</title>
+    <meta name="description" CONTENT="Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.">
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
@@ -21,10 +21,10 @@
     <!-- Twitter + Open Graph -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:creator" content="@johndoe" />
-    <meta property="og:url" content="https://11ty-portfolio-template.netlify.app/projects/2021-05-social-media-marketing-for-brandy/" />
-    <meta property="og:title" content="Project Title 3" />
-    <meta property="og:description" content="Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum" />
-    <meta property="og:image" content="https://11ty-portfolio-template.netlify.app/assets/images/pexels-giftpunditscom-1310532.jpg" />
+    <meta property="og:url" content="https://11ty-portfolio-template.netlify.app/projects/2021-11-project-title-7/" />
+    <meta property="og:title" content="Project Title 7" />
+    <meta property="og:description" content="Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." />
+    <meta property="og:image" content="https://11ty-portfolio-template.netlify.app/assets/images/pexels-alex-andrews-821652.jpg" />
 
     <!-- CSS -->
     <link href="/style.css" rel="stylesheet">
@@ -135,10 +135,10 @@
     <main>
       <link href="/assets/themes/prism.css" rel="stylesheet"/>
 
-<img class="work-bg-img" src="/assets/images/pexels-giftpunditscom-1310532.jpg" alt="Woman looking down at her phone">
+<img class="work-bg-img" src="/assets/images/pexels-alex-andrews-821652.jpg" alt="Disassembled camera on flat background">
 <div class="section spacing full-page top-p-m">
     <div class="title" id="project-title">
-        <h1>Project Title 3</h1>
+        <h1>Project Title 7</h1>
     </div>
 
     <div class="project-summary">
@@ -176,11 +176,11 @@
                                 </g>
                             </g>
                         </svg>
-                        <p> 29 Apr 2021 </p>
+                        <p> 01 Nov 2021 </p>
                     </div>
             </div>
         
-        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
         <div class="cta centre-parent">
             <a href="#target-content" class="btn-primary">Tell me more!<span>&#8595;</span></a>
@@ -193,7 +193,14 @@
         <h1>Heading 1</h1>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <h2>Heading 2</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p><img src="/assets/images/megaphone.png" alt="Microphone with blue background" title="Microphone with blue background"></p>
+<p><strong>This is bold text</strong></p>
+<p><em>This is italics text</em></p>
+<p><a href="https://www.example.com">https://www.example.com</a></p>
+<blockquote>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+</blockquote>
 <h2>Types of lists</h2>
 <h3>Unordered lists</h3>
 <ul>
