--- a/public/projects/2021-05-01-social-media-marketing-for-brandx/index.html
+++ b/public/projects/2021-05-01-social-media-marketing-for-brandx/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Doe - Social Media Creation 2</title>
-    <meta name="description" CONTENT="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam...">
+    <title>John Doe - Project Title 2</title>
+    <meta name="description" CONTENT="Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.">
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
@@ -22,9 +22,9 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:creator" content="@johndoe" />
     <meta property="og:url" content="https://11ty-portfolio-template.netlify.app/projects/2021-05-01-social-media-marketing-for-brandx/" />
-    <meta property="og:title" content="Social Media Creation 2" />
-    <meta property="og:description" content="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam..." />
-    <meta property="og:image" content="https://11ty-portfolio-template.netlify.app/assets/images/placeholder-image.jpg" />
+    <meta property="og:title" content="Project Title 2" />
+    <meta property="og:description" content="Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat." />
+    <meta property="og:image" content="https://11ty-portfolio-template.netlify.app/assets/images/pexels-melvin-buezo-2529147.jpg" />
 
     <!-- CSS -->
     <link href="/style.css" rel="stylesheet">
@@ -135,10 +135,10 @@
     <main>
       <link href="/assets/themes/prism.css" rel="stylesheet"/>
 
-<img class="work-bg-img" src="/assets/images/placeholder-image.jpg" alt="This is a test">
+<img class="work-bg-img" src="/assets/images/pexels-melvin-buezo-2529147.jpg" alt="Close up of a shoe">
 <div class="section spacing full-page top-p-m">
     <div class="title" id="project-title">
-        <h1>Social Media Creation 2</h1>
+        <h1>Project Title 2</h1>
     </div>
 
     <div class="project-summary">
@@ -176,11 +176,11 @@
                                 </g>
                             </g>
                         </svg>
-                        <p> 01 May 2021 </p>
+                        <p> 27 Apr 2021 </p>
                     </div>
             </div>
         
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam...</p>
+        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 
         <div class="cta centre-parent">
             <a href="#target-content" class="btn-primary">Tell me more!<span>&#8595;</span></a>
@@ -191,79 +191,61 @@
 <div class="section work-content markdown spacing bottom-m-l top-m-s">
     <span class="anchor-link" id="target-content"></span>
         <h1>Heading 1</h1>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <h2>Heading 2</h2>
-<h3>Heading 3</h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p><img src="/assets/images/megaphone.png" alt="Microphone with blue background" title="Microphone with blue background"></p>
+<p><strong>This is bold text</strong></p>
+<p><em>This is italics text</em></p>
+<p><a href="https://www.example.com">https://www.example.com</a></p>
 <blockquote>
-<p>This is a blockquote
-<strong>bold text</strong>
-<em>italicized text</em></p>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 </blockquote>
-<ol>
-<li>First Item</li>
-<li>Second Item</li>
-<li>Third Item</li>
-</ol>
+<h2>Types of lists</h2>
+<h3>Unordered lists</h3>
 <ul>
-<li>[x] this is a complete item</li>
-<li>[ ] this is an incomplete item</li>
-<li>[x] @mentions, #refs, <a href="">links</a>,
-<strong>formatting</strong>, and <del>tags</del>
-supported</li>
-<li>[x] list syntax required (any
-unordered or ordered list
-supported)</li>
+<li>List item 1</li>
+<li>List item 2</li>
+<li>List item 3</li>
+<li>List item 4</li>
 </ul>
-<hr>
-<table>
-<thead>
-<tr>
-<th>First Header</th>
-<th>Second Header</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>Content cell 1</td>
-<td>Content cell 2</td>
-</tr>
-<tr>
-<td>Content column 1</td>
-<td>Content column 2</td>
-</tr>
-</tbody>
-</table>
-<p><a href="https://www.example.com">linkTitle</a>
-<img src="/assets/projects/placeholder-image.jpg" alt="alt text"></p>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim blandit volutpat maecenas volutpat blandit aliquam etiam erat velit. Pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat vivamus at. Netus et malesuada fames ac turpis egestas sed. Tincidunt arcu non sodales neque sodales ut etiam sit amet. Lorem ipsum dolor sit amet consectetur. Viverra justo nec ultrices dui. Vulputate ut pharetra sit amet aliquam id diam. Accumsan tortor posuere ac ut. Condimentum mattis pellentesque id nibh tortor id aliquet lectus. Tristique risus nec feugiat in fermentum posuere urna nec. Morbi tristique senectus et netus et malesuada fames ac. Non quam lacus suspendisse faucibus interdum. Amet luctus venenatis lectus magna fringilla urna porttitor rhoncus dolor. Cras pulvinar mattis nunc sed blandit. Ornare suspendisse sed nisi lacus. Urna condimentum mattis pellentesque id. Diam vel quam elementum pulvinar etiam non quam lacus.</p>
-<p>Morbi quis commodo odio aenean. Vitae congue mauris rhoncus aenean vel elit scelerisque. Augue ut lectus arcu bibendum at varius vel pharetra. Sagittis orci a scelerisque purus. Tincidunt dui ut ornare lectus sit amet est. Arcu felis bibendum ut tristique et egestas quis ipsum suspendisse. Mauris pellentesque pulvinar pellentesque habitant morbi tristique senectus et. Mattis aliquam faucibus purus in massa. Lacus luctus accumsan tortor posuere ac. Facilisi cras fermentum odio eu.</p>
-<p>In dictum non consectetur a erat nam at. Lorem sed risus ultricies tristique nulla aliquet enim. Neque sodales ut etiam sit amet. Dictumst quisque sagittis purus sit amet volutpat consequat. Ut aliquam purus sit amet. Sed vulputate mi sit amet mauris. Tincidunt nunc pulvinar sapien et ligula. At tempor commodo ullamcorper a lacus. Et odio pellentesque diam volutpat commodo. Dictum fusce ut placerat orci. Non odio euismod lacinia at quis risus. Auctor urna nunc id cursus. In metus vulputate eu scelerisque felis imperdiet proin fermentum. Ullamcorper malesuada proin libero nunc consequat interdum varius sit. Tincidunt augue interdum velit euismod in pellentesque. Ultricies lacus sed turpis tincidunt id aliquet risus feugiat in. Eleifend mi in nulla posuere sollicitudin. Et pharetra pharetra massa massa ultricies mi quis hendrerit. Ut morbi tincidunt augue interdum velit. Donec pretium vulputate sapien nec sagittis aliquam.</p>
-<p>Lectus nulla at volutpat diam ut venenatis tellus in. Ante metus dictum at tempor commodo ullamcorper a lacus. Auctor eu augue ut lectus. Lacus viverra vitae congue eu consequat ac felis. Pretium fusce id velit ut tortor pretium viverra suspendisse. Iaculis urna id volutpat lacus laoreet non curabitur gravida arcu. Vitae justo eget magna fermentum iaculis eu non diam phasellus. Etiam erat velit scelerisque in dictum non consectetur a. Habitasse platea dictumst quisque sagittis purus sit amet. Tellus rutrum tellus pellentesque eu tincidunt tortor aliquam. Bibendum arcu vitae elementum curabitur vitae nunc sed velit dignissim. Aenean euismod elementum nisi quis eleifend quam adipiscing vitae proin. Molestie at elementum eu facilisis sed. Consequat id porta nibh venenatis cras sed. Nisi scelerisque eu ultrices vitae auctor eu augue ut. Nunc id cursus metus aliquam eleifend mi. A scelerisque purus semper eget duis at tellus. Dictumst quisque sagittis purus sit amet volutpat consequat mauris.</p>
-<p>Turpis in eu mi bibendum neque egestas congue quisque. Nunc sed augue lacus viverra vitae congue. Integer enim neque volutpat ac tincidunt vitae semper quis lectus. Pulvinar pellentesque habitant morbi tristique senectus et netus. Tempor nec feugiat nisl pretium fusce id velit ut tortor. Porta nibh venenatis cras sed felis eget velit aliquet. Tincidunt lobortis feugiat vivamus at augue eget arcu dictum varius. Aliquet risus feugiat in ante metus dictum at tempor. Donec pretium vulputate sapien nec sagittis aliquam. Rutrum tellus pellentesque eu tincidunt. Sit amet nulla facilisi morbi tempus iaculis urna id. Massa sed elementum tempus egestas sed sed risus pretium quam.</p>
+<h3>Numbered list</h3>
+<ol>
+<li>Item number 1</li>
+<li>Item number 2</li>
+<li>Item number 3</li>
+</ol>
+<h2>Code</h2>
+<h3>Code tag</h3>
+<p><code>if(true){ float temperature = variable * constant; return }</code></p>
+<h3>Code Block</h3>
+<pre><code class="language-csharp">// This is a code block
+
+public class Person
+{
+  public string Name {get; set;}
+  public string Surname {get; set;}
+  public Address Adress{get;set;}
+}
+
+public class Address
+{
+  public string Street{get;set;}
+  public string Province{get;set;}
+  public string Country {get; set;}
+  
+  public Address()
+  {
+    // Constructor here
+  }
+}
+</code></pre>
 
 
         <a href="/work/" class="btn-primary top-m-s">All Projects</a><a href="#project-title" class="btn-primary" style="margin-top: 15px;">Back to Top</a>
 </div>
 
-<script>
-    $(document).ready(function() {
-        WrapCodeTagsWithPreTags();
-        AppenBulletListSpanToLists();
-    });
-
-    function AppenBulletListSpanToLists(){
-      $(".markdown ul, .markdown ol").children().prepend("<span class='bullet-point'></span>")
-    }
-
-    function WrapCodeTagsWithPreTags(){
-        $("code").parent().each(function(index){
-            if(!$(this).is('pre'))
-            {
-                $(this).children().wrap("<pre class='language-csharp' tabindex='0'></pre>");
-            }
-        });
-    }
-</script>
-
+<script src="/markdown.js"></script>
 <script src="/assets/themes/prism.js"></script>
     </main>
     
