--- a/public/projects/2021-10-testing-the-editorial-publish-mode/index.html
+++ b/public/projects/2021-10-testing-the-editorial-publish-mode/index.html
@@ -134,17 +134,19 @@
     
     <main>
 
-    <div class="popup-wrapper" id="popup">
-      <div class="popup-content spacing">
-        <p>This website is a template using Jamstack architecture, get the template at <a href="">Github</a></p>
-        <svg onclick="ClosePopUp()" xmlns="http://www.w3.org/2000/svg" width="38.664" height="38.664" viewBox="0 0 38.664 38.664">
-          <g id="Group_67" data-name="Group 67" transform="translate(-1293.084 -263.584)">
-            <rect id="Rectangle_51" data-name="Rectangle 51" width="46.185" height="8.494" transform="translate(1299.09 263.584) rotate(45)" fill="#fff"/>
-            <rect id="Rectangle_52" data-name="Rectangle 52" width="46.185" height="8.494" transform="translate(1293.084 296.242) rotate(-45)" fill="#fff"/>
-          </g>
-        </svg>
+      <div class="popup-wrapper" id="popup">
+        <div class="popup-content spacing">
+          <p>This website is a template using Jamstack architecture, get the template at <a href="">Github</a></p>
+          <svg onclick="ClosePopUp()" xmlns="http://www.w3.org/2000/svg" width="38.664" height="38.664" viewBox="0 0 38.664 38.664">
+            <g id="Group_67" data-name="Group 67" transform="translate(-1293.084 -263.584)">
+              <rect id="Rectangle_51" data-name="Rectangle 51" width="46.185" height="8.494" transform="translate(1299.09 263.584) rotate(45)" fill="#fff"/>
+              <rect id="Rectangle_52" data-name="Rectangle 52" width="46.185" height="8.494" transform="translate(1293.084 296.242) rotate(-45)" fill="#fff"/>
+            </g>
+          </svg>
+        </div>
       </div>
-    </div>
+
+      <script src="/popupNotification.js"></script>
 
       <link href="/assets/themes/prism.css" rel="stylesheet"/>
 
@@ -212,6 +214,7 @@
 
 <script src="/markdown.js"></script>
 <script src="/assets/themes/prism.js"></script>
+
     </main>
     
     <footer>
