moved required components for markdown to includes

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -281,6 +281,8 @@
 </div>
 
 <script src="/markdown.js"></script>
+<link href="/assets/themes/prism.css" rel="stylesheet"/>
+<script src="/assets/themes/prism.js"></script>
 
     </main>
     
